crates/diffguard-analytics/tests/snapshots/snapshot_tests__snapshot_merge_fills_line_from_incoming_when_base_zero.snap
---
source: crates/diffguard-analytics/tests/snapshot_tests.rs
expression: baseline_to_json(&merged)
---
{
  "schema": "diffguard.false_positive_baseline.v1",
  "entries": [
    {
      "fingerprint": "aaa111",
      "rule_id": "rule.a",
      "path": "a.rs",
      "line": 1
    }
  ]
}
