crates/diffguard-analytics/tests/snapshots/snapshot_tests__snapshot_merge_long_strings.snap
---
source: crates/diffguard-analytics/tests/snapshot_tests.rs
expression: baseline_to_json(&merged)
---
{
  "schema": "diffguard.false_positive_baseline.v1",
  "entries": [
    {
      "fingerprint": "aaa111",
      "rule_id": "rule.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
      "path": "srcsrcsrcsrcsrcsrcsrcsrcsrcsrcsrcsrcsrcsrcsrcsrcsrcsrcsrcsrc/file.rsfile.rsfile.rsfile.rsfile.rsfile.rsfile.rsfile.rsfile.rsfile.rs",
      "line": 1,
      "note": "notenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenotenote"
    }
  ]
}
