crates/diffguard-analytics/tests/snapshots/snapshot_tests__snapshot_merge_note_precedence_both_some.snap
---
source: crates/diffguard-analytics/tests/snapshot_tests.rs
expression: note_value
---
Some("base note")
