crates/diffguard-analytics/tests/snapshots/snapshot_tests__snapshot_merge_only_incoming_has_entries.snap
---
source: crates/diffguard-analytics/tests/snapshot_tests.rs
expression: baseline_to_json(&merged)
---
{
  "schema": "diffguard.false_positive_baseline.v1",
  "entries": [
    {
      "fingerprint": "bbb222",
      "rule_id": "rule.b",
      "path": "b.rs",
      "line": 2
    }
  ]
}
