crates/diffguard-analytics/tests/snapshots/snapshot_tests__snapshot_merge_prefers_existing.snap
---
source: crates/diffguard-analytics/tests/snapshot_tests.rs
expression: note_value
---
Some("existing note")
